--- a/XAU/Views/Pages/SettingsPage.xaml
+++ b/XAU/Views/Pages/SettingsPage.xaml
@@ -66,7 +66,7 @@
                              IsEnabled="False"/>
             
             <ui:ToggleSwitch Content="Force English"
-                             Margin="5 0 0 0"
+                             Margin="5 0"
                              IsChecked="{Binding ViewModel.RegionOverride, Mode=TwoWay}"
                              Command="{Binding ViewModel.SaveSettingsCommand}"
                              IsEnabled="True"/>
