--- a/XAU/Views/Pages/GamesPage.xaml
+++ b/XAU/Views/Pages/GamesPage.xaml
@@ -151,7 +151,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" Margin="5,5,5,7">
-                            <Button MinHeight="170" MinWidth="170" Click="ButtonBase_OnClick" MouseRightButtonDown="ButtonBase_RightClick" Content="{Binding Index}">
+                            <Button Cursor="Hand" MinHeight="170" MinWidth="170" Click="ButtonBase_OnClick" MouseRightButtonDown="ButtonBase_RightClick" Content="{Binding Index}">
                                 <Button.Template>
                                     <ControlTemplate>
                                         <ui:Image Source="{Binding Image, IsAsync=true}" Width="170" Height="170" CornerRadius="10" Margin="0,0,0,0" Background="White"/>
