--- a/XAU/Views/Windows/MainWindow.xaml
+++ b/XAU/Views/Windows/MainWindow.xaml
@@ -1,64 +1,44 @@
-﻿<ui:FluentWindow
-    x:Class="XAU.Views.Windows.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:XAU.Views.Windows"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="{Binding ViewModel.ApplicationTitle, Mode=OneWay}"
-    Width="1212"
-    Height="700"
-    d:DataContext="{d:DesignInstance local:MainWindow,
-                                     IsDesignTimeCreatable=True}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    ExtendsContentIntoTitleBar="True"
-    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    WindowBackdropType="Mica"
-    WindowCornerPreference="Round"
-    WindowStartupLocation="CenterScreen"
-    mc:Ignorable="d">
-    <!--1212 is picked because it just barely fits the amount of items when sidebar is collapsed-->
+﻿<ui:FluentWindow x:Class="XAU.Views.Windows.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:local="clr-namespace:XAU.Views.Windows"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+                 Title="{Binding ViewModel.ApplicationTitle, Mode=OneWay}"
+                 mc:Ignorable="d"
+                 d:DataContext="{d:DesignInstance local:MainWindow,IsDesignTimeCreatable=True}"
+                 d:DesignHeight="450"
+                 d:DesignWidth="800"
+                 ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+                 ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                 ExtendsContentIntoTitleBar="True"
+                 WindowBackdropType="Mica"
+                 Foreground="{DynamicResource TextFillColorPrimaryBrush}">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:NavigationView
-            x:Name="NavigationView"
-            Grid.Row="1"
-            Padding="42,0,42,0"
-            OpenPaneLength="220"
-            FooterMenuItemsSource="{Binding ViewModel.FooterMenuItems, Mode=OneWay}"
-            FrameMargin="0"
-            IsBackButtonVisible="Collapsed"
-            IsPaneToggleVisible="True"
-            MenuItemsSource="{Binding ViewModel.MenuItems, Mode=OneWay}"
-            PaneDisplayMode="Left">
-            <ui:NavigationView.Header>
-                <!--leaving this so I can have 20px top padding-->
-                <ui:BreadcrumbBar x:Name="BreadcrumbBar" Margin="0,20,0,0" HorizontalAlignment="Center" />
-            </ui:NavigationView.Header>
+        
+        <ui:NavigationView x:Name="NavigationView"
+                           Grid.Row="1"
+                           FooterMenuItemsSource="{Binding ViewModel.FooterMenuItems, Mode=OneWay}"
+                           MenuItemsSource="{Binding ViewModel.MenuItems, Mode=OneWay}"
+                           Loaded="NavigationView_OnLoaded">
             <ui:NavigationView.ContentOverlay>
-                <Grid>
-                    <ui:SnackbarPresenter x:Name="SnackbarPresenter" />
-                </Grid>
+                <ui:SnackbarPresenter x:Name="SnackbarPresenter" />
             </ui:NavigationView.ContentOverlay>
         </ui:NavigationView>
 
-        <ContentPresenter
-            x:Name="RootContentDialog"
-            Grid.Row="0"
-            Grid.RowSpan="2" />
+        <ContentPresenter x:Name="RootContentDialog"
+                          Grid.Row="0"
+                          Grid.RowSpan="2" />
 
-        <ui:TitleBar
-            x:Name="TitleBar"
-            Title="{Binding ViewModel.ApplicationTitle}"
-            Grid.Row="0"
-            CloseWindowByDoubleClickOnIcon="True">
+        <ui:TitleBar Grid.Row="0" 
+                     Title="{Binding ViewModel.ApplicationTitle}"
+                     CloseWindowByDoubleClickOnIcon="True">
             <ui:TitleBar.Icon>
                 <ui:ImageIcon Source="pack://application:,,,/Assets/cirno.png" />
             </ui:TitleBar.Icon>
