--- a/XAU/Views/Pages/HomePage.xaml
+++ b/XAU/Views/Pages/HomePage.xaml
@@ -1,169 +1,149 @@
-﻿<Page
-    x:Class="XAU.Views.Pages.HomePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:XAU.Views.Pages"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="HomePage"
-    d:DataContext="{d:DesignInstance local:HomePage,
-                                     IsDesignTimeCreatable=False}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    mc:Ignorable="d">
+﻿<Page x:Class="XAU.Views.Pages.HomePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:XAU.Views.Pages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      Title="HomePage"
+      d:DataContext="{d:DesignInstance local:HomePage,IsDesignTimeCreatable=False}"
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+      ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      mc:Ignorable="d">
 
+    <Grid Margin="{StaticResource PageMargin}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <StackPanel Grid.Row="0" 
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left">
+            
+            <ui:TextBlock Text="{Binding ViewModel.Attached}" 
+                          Foreground="{Binding ViewModel.AttachedColor}"
+                          FontTypography="BodyStrong"/>
 
-    <Grid>
-        <ui:TextBlock 
-            Text="{Binding ViewModel.Attached}"
-            Foreground="{Binding ViewModel.AttachedColor}"
-        ></ui:TextBlock>
-        <ui:TextBlock 
-            Padding="0, 30, 0, 0"
-            Text="{Binding ViewModel.LoggedIn}"
-            Foreground="{Binding ViewModel.LoggedInColor}"
-        ></ui:TextBlock>
-        <ui:Image
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Width="150"
-            Height="150"
-            Source="{Binding ViewModel.GamerPic, Mode=OneWay}"
-            CornerRadius="75"
-        ></ui:Image>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 170, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.GamerTag, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 170, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Xuid, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.GamerScore, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.ProfileRep, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.AccountTier, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 250, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.CurrentlyPlaying, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 250, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.ActiveDevice, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.IsVerified, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Location, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Tenure, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Followers, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Following, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Gamepass, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 370, 0, 0"
-            FontSize="20"
-            TextWrapping="Wrap"
-            Text="{Binding ViewModel.Bio, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:Button
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Content="Refresh"
-            IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
-            Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 410, 0, 0"
-            FontSize="20"
-            TextWrapping="Wrap"
-            Text="Badges: "
-        ></ui:TextBlock>
-        <ItemsControl ItemsSource="{Binding ViewModel.Watermarks}"
-        HorizontalAlignment="Left"
-        VerticalAlignment="Top"
-        Padding="0, 440, 0, 0"
-        FontSize="20">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Image Source="{Binding ImageUrl}" Width="128" Height="128" Stretch="Uniform" />
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+            <ui:TextBlock Text="{Binding ViewModel.LoggedIn}"
+                          Foreground="{Binding ViewModel.LoggedInColor}"
+                          FontTypography="BodyStrong"/>
+            
+        </StackPanel>
+        
+        <ui:Image Grid.Row="0" 
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Top"
+                  Margin="10"
+                  Width="150"
+                  Height="150"
+                  Source="{Binding ViewModel.GamerPic, Mode=OneWay}"
+                  CornerRadius="75"/>
+        
+        <ui:Button Grid.Row="0" 
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Top"
+                   Content="Refresh"
+                   IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
+                   Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
+        
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top">
+            
+            <ui:TextBlock Text="{Binding ViewModel.GamerTag, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.GamerScore, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.CurrentlyPlaying, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.Followers, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+            
+            <ui:TextBlock TextWrapping="Wrap"
+                          Text="{Binding ViewModel.Bio, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.IsVerified, Mode=OneWay}"
+                          FontTypography="BodyStrong"/>
+
+        </StackPanel>
+        
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top">
+            
+            <ui:TextBlock Text="{Binding ViewModel.ProfileRep, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Center"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.Location, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Center"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.Following, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Center"/>
+            
+        </StackPanel>
+        
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top">
+            
+            <ui:TextBlock Text="{Binding ViewModel.Xuid, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Right"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.AccountTier, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Right"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.ActiveDevice, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Right"/>
+            
+            <ui:TextBlock Text="{Binding ViewModel.Tenure, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Right"/>
+            
+            <ui:TextBlock TextWrapping="Wrap"
+                          Text="{Binding ViewModel.Gamepass, Mode=OneWay}"
+                          FontTypography="BodyStrong"
+                          HorizontalAlignment="Right"/>
+            
+        </StackPanel>
+        
+        <StackPanel Grid.Row="2"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top">
+            
+            <ui:TextBlock TextWrapping="Wrap"
+                          Text="Badges: "
+                          FontTypography="BodyStrong"/>
+            
+            <ItemsControl ItemsSource="{Binding ViewModel.Watermarks}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding ImageUrl}" 
+                               Width="100" 
+                               Height="100" 
+                               Stretch="Uniform" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
     </Grid>
-
 </Page>
