--- a/XAU/Views/Pages/GamesPage.xaml
+++ b/XAU/Views/Pages/GamesPage.xaml
@@ -1,5 +1,6 @@
 ﻿<Page x:Class="XAU.Views.Pages.GamesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:p="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:XAU.Views.Pages"
@@ -70,11 +71,11 @@
                 IsEnabled="{Binding ViewModel.IsInitialized}"
                 Padding="10,4,8,7"
                 Margin="10,0,44,0"
-                Text="{Binding ViewModel.SearchText, Mode=TwoWay}"
+                Text="{Binding ViewModel.SearchText, Mode=TwoWay, IsAsync=True}"
                 PlaceholderText="Search for a game"
                 TextAlignment="Center"
                 ClearButtonEnabled="False"
-                KeyDown="SearchBox_OnKeyDown"
+                KeyDown="SearchBox_OnKeyDownAsync"
             />
             <ui:Button
                 Grid.Row="1"
