--- a/XAU/Views/Pages/HomePage.xaml
+++ b/XAU/Views/Pages/HomePage.xaml
@@ -1,169 +1,79 @@
-﻿<Page
-    x:Class="XAU.Views.Pages.HomePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:XAU.Views.Pages"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="HomePage"
-    d:DataContext="{d:DesignInstance local:HomePage,
-                                     IsDesignTimeCreatable=False}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    mc:Ignorable="d">
-
+<Page x:Class="XAU.Views.Pages.HomePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:XAU.Views.Pages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      Title="HomePage"
+      d:DataContext="{d:DesignInstance local:HomePage, IsDesignTimeCreatable=False}"
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      mc:Ignorable="d">
 
     <Grid>
-        <ui:TextBlock 
-            Text="{Binding ViewModel.Attached}"
-            Foreground="{Binding ViewModel.AttachedColor}"
-        ></ui:TextBlock>
-        <ui:TextBlock 
-            Padding="0, 30, 0, 0"
-            Text="{Binding ViewModel.LoggedIn}"
-            Foreground="{Binding ViewModel.LoggedInColor}"
-        ></ui:TextBlock>
-        <ui:Image
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Width="150"
-            Height="150"
-            Source="{Binding ViewModel.GamerPic, Mode=OneWay}"
-            CornerRadius="75"
-        ></ui:Image>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 170, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.GamerTag, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 170, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Xuid, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.GamerScore, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.ProfileRep, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 210, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.AccountTier, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 250, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.CurrentlyPlaying, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 250, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.ActiveDevice, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.IsVerified, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Location, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 290, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Tenure, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Followers, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Following, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Padding="0, 330, 0, 0"
-            FontSize="20"
-            Text="{Binding ViewModel.Gamepass, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 370, 0, 0"
-            FontSize="20"
-            TextWrapping="Wrap"
-            Text="{Binding ViewModel.Bio, Mode=OneWay}"
-        ></ui:TextBlock>
-        <ui:Button
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Content="Refresh"
-            IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
-            Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
-        <ui:TextBlock
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Padding="0, 410, 0, 0"
-            FontSize="20"
-            TextWrapping="Wrap"
-            Text="Badges: "
-        ></ui:TextBlock>
-        <ItemsControl ItemsSource="{Binding ViewModel.Watermarks}"
-        HorizontalAlignment="Left"
-        VerticalAlignment="Top"
-        Padding="0, 440, 0, 0"
-        FontSize="20">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Image Source="{Binding ImageUrl}" Width="128" Height="128" Stretch="Uniform" />
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#FF291818" Offset="0"/>
+            </LinearGradientBrush>
+        </Grid.Background>
 
+        <Grid Margin="20">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" CornerRadius="75" Width="150" Height="150" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <Image Source="{Binding ViewModel.GamerPic, Mode=OneWay}" Stretch="UniformToFill"/>
+            </Border>
+
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20">
+                <StackPanel.Resources>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="FontSize" Value="20"/>
+                        <Setter Property="Margin" Value="10"/>
+                    </Style>
+                </StackPanel.Resources>
+                <TextBlock Text="{Binding ViewModel.GamerTag, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Xuid, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.GamerScore, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.ProfileRep, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.AccountTier, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.CurrentlyPlaying, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.ActiveDevice, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.IsVerified, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Location, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Tenure, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Followers, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Following, Mode=OneWay}"/>
+                <TextBlock Text="{Binding ViewModel.Gamepass, Mode=OneWay}"/>
+            </StackPanel>
+
+            <!-- Action Buttons -->
+            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20">
+                <ui:Button Content="Refresh" IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
+                           Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
+            </StackPanel>
+
+            <!-- Badges -->
+            <ItemsControl Grid.Row="3" ItemsSource="{Binding ViewModel.Watermarks}" HorizontalAlignment="Center"
+                          VerticalAlignment="Center" Margin="0,20">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding ImageUrl}" Width="128" Height="128" Stretch="Uniform"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+        </Grid>
+    </Grid>
 </Page>
